--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960;
 
 displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'
 <a-entity gltf-model="./assets/C:/Users/Amy Thresia/Desktop/5" rotation="0 180 0" scale="0.15 0.15
-0.15" gps-entity-place="longitude: 12.489820; latitude: 41.892590;"
+0.15" gps-entity-place="longitude: 8.6161905; latitude: 76.8525993;"
 animation-mixer>
 <a-camera gps-camera rotation-reader></a-camera>
 </a-scene>
